--- a/Janus/ConnectionsBundle/Resources/public/css/connections.css
+++ b/Janus/ConnectionsBundle/Resources/public/css/connections.css
@@ -122,12 +122,22 @@ ul#connections-list a {
 
 /** Connections form */
 form #connection label {
-    display: block;
     width: 40%;
-    float:left;
+    display: block;
+    float: left;
+    font-weight: bold;
+    clear:both;
 }
 
 form #connection textarea,
 {
     width: 50%;
+}
+
+form #connection .field-group {
+    margin: 10px;
+    padding: 10px;
+    display: block;
+    border: solid 1px grey;
+    background-color: #d3d3d3;
 }
