#396 Used form rest rendering to make sure all fields are rendered

--- a/Janus/ConnectionsBundle/Resources/views/Connection/newConnection.html.twig
+++ b/Janus/ConnectionsBundle/Resources/views/Connection/newConnection.html.twig
@@ -10,7 +10,7 @@
     {%  if (form is defined) %}
     <form action="{{ url('post_connections') }}" method="POST" {{ form_enctype(form) }}>
 
-        {{ form_widget(form) }}
+        {{ form_rest(form) }}
 
         <input type="submit" value="{% trans from 'JanusConnectionsBundle' %}connection.new.submit{% endtrans %}">
     </form>
