--- a/Janus/ConnectionsBundle/Resources/views/Connection/editConnections.html.twig
+++ b/Janus/ConnectionsBundle/Resources/views/Connection/editConnections.html.twig
@@ -10,7 +10,7 @@
     <form action="{{ url('put_connections', {'id': id}) }}" method="POST" {{ form_enctype(form) }}>
         <input type="hidden" name="_method" value="put" />
 
-        {{ form_widget(form) }}
+        {{ form_rest(form) }}
 
         <input type="submit" value="{% trans from 'JanusConnectionsBundle' %}connection.edit.submit{% endtrans %}">
     </form>
