--- a/Janus/ServiceRegistryBundle/Resources/views/Connection/editConnection.html.twig
+++ b/Janus/ServiceRegistryBundle/Resources/views/Connection/editConnection.html.twig
@@ -7,7 +7,7 @@
 {% block content %}
     <h1 class="title">{{ 'connection.edit.headline'|trans({'%id%': id}, 'JanusServiceRegistryBundle') }}</h1>
 
-    <form action="{{ url('put_connections', {'id': id}) }}" method="POST" {{ form_enctype(form) }}>
+    <form action="{{ url('put_connection', {'id': id}) }}" method="POST" {{ form_enctype(form) }}>
         <input type="hidden" name="_method" value="put" />
 
         {{ form_rest(form) }}
